# quote-check

./: README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  selfcheck.yml
quotecheck/: __init__.py  __main__.py  check.py  match.py  parse.py  sources.py
sources/: acton-creighton-1887.txt
tests/: test_acton.py  test_match.py  test_parse.py  test_sources.py
