[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quote-check"
version = "1.0.0"
description = "Check that a document's quotations really appear in the sources they cite"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Wasserpuncher" }]
keywords = ["quotes", "citations", "documentation", "fact-checking", "ci", "honesty"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
]
dependencies = []

[project.scripts]
quote-check = "quotecheck.__main__:main"

[project.urls]
Homepage = "https://github.com/Wasserpuncher/quote-check"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["quotecheck*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
